# aws-glue-cdc-framework

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
compose/: debezium-connector.json  docker-compose.yml
compose/mysql-init/: 01-schema.sql
config/: local.yaml  prod.yaml
docs/: ARCHITECTURE.md  COST_ANALYSIS.md  LOCAL_DEVELOPMENT.md  PERFORMANCE.md  RUNBOOK.md
infra/terraform/: main.tf  outputs.tf  variables.tf
infra/terraform/envs/: dev.backend.hcl.example  dev.tfvars.example
infra/terraform/modules/eventbridge/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/glue/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/iam/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/kinesis/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/monitoring/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/opensearch/: main.tf  outputs.tf
infra/terraform/modules/rds/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/redshift/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/s3/: main.tf  outputs.tf
infra/terraform/modules/secrets/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/stepfunctions/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/vpc/: main.tf  variables.tf
scripts/: backfill.py  deploy.sh
simulators/debezium/: __init__.py  simulator.py
src/: __init__.py  cli.py
src/cdc/: __init__.py  parser.py  router.py
src/glue_jobs/: __init__.py  cdc_to_sinks.py
src/lambdas/: __init__.py  s3_trigger.py  sfn_notifier.py
src/schemas/: __init__.py  contracts.py  debezium.py
src/sinks/: __init__.py  base.py  opensearch_sink.py  postgres_sink.py  redshift_sink.py
src/utils/: __init__.py  config_loader.py  idempotency.py  logging_config.py  metrics.py  secrets.py  spark_session.py
stepfunctions/: cdc_pipeline.json
tests/: conftest.py
tests/unit/: test_cdc_parser.py  test_contracts.py  test_simulator.py
